# practice

./: README.md  note
contract/: Cargo.toml
contract/src/: lib.rs
tests/: Cargo.toml
tests/src/: integration_tests.rs
tests/wasm/: dictionary.wasm
